--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dattingapp.db"
   },
+  "TokenKey": "super secret key 12345678910 12345678910 12345678910 12345678910 12345678910 12345678910",
   "AllowedHosts": "*"
 }
